--- a/po/pl.po
+++ b/po/pl.po
@@ -1,95 +1,95 @@
-# translation of snapper.po to Japanese
-# Japanese translations for PACKAGE package.
-# Copyright (C) 2011 SUSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the PACKAGE package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
-# Yasuhiko Kamata <belphegor@belbel.or.jp>, 2011.
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# , 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: snapper\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-10-12 15:11+0200\n"
-"PO-Revision-Date: 2011-10-06 16:24+0900\n"
-"Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese <opensuse-ja@opensuse.org>\n"
-"Language: ja\n"
+"PO-Revision-Date: 2011-09-25 15:08+0200\n"
+"Last-Translator: \n"
+"Language-Team: Polish <kde-i18n-doc@kde.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #: ../tools/snapper.cc:433 ../tools/snapper.cc:549
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr "\t--cleanup-algorithm, -c <アルゴリズム>\t\tスナップショットに対するクリーンアップアルゴリズムの指定"
+msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm oczyszczania zrzutu."
 
 #: ../tools/snapper.cc:1003
 msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <名前>\t\t使用する設定ファイル名を指定する"
+msgstr "\t--config, -c <nazwa>\t\tUstawienie nazwy config w użyciu."
 
 #: ../tools/snapper.cc:432 ../tools/snapper.cc:548
 msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <説明>\tスナップショットの説明を指定"
+msgstr "\t--description, -d <opis>\tOpis zrzutu."
 
 #: ../tools/snapper.cc:1004
 msgid "\t--disable-filters\t\tDisable filters."
-msgstr "\t--disable-filters\t\tフィルタを無効にする"
+msgstr "\t--disable-filters\t\tWyłącz filtry."
 
 #: ../tools/snapper.cc:222
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr "\t--fstype, -f <種類>\t\t手動でファイルシステムの種類を指定する"
+msgstr "\t--fstype, -f <fstype>\t\tRęczne ustawienie typu systemu plików."
 
 #: ../tools/snapper.cc:826
 msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr "\t--input, -i <ファイル>\t\tファイルから巻き戻すべきファイルを読み込む"
+msgstr "\t--input, -i <plik>\t\tCzytaj pliki, dla których można cofnąć zmiany z pliku."
 
 #: ../tools/snapper.cc:721
 msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <ファイル>\t\t状態をファイルに保存する"
+msgstr "\t--output, -o <plik>\t\tZapisz status pliku."
 
 #: ../tools/snapper.cc:430
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <番号>\t\tプリ・スナップショットの番号を指定"
+msgstr "\t--pre-number <numer>\t\tLiczba odpowiadająca wcześniejszemu zrzutowi."
 
 #: ../tools/snapper.cc:431
 msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\t作成したスナップショットの数を表示"
+msgstr "\t--print-number, -p\t\tDrukuj numer tworzonego zrzutu."
 
 #: ../tools/snapper.cc:1000
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\t通常出力される項目の省略"
+msgstr "\t--quiet, -q\t\t\tWyłącza normalne wyjście."
 
 #: ../tools/snapper.cc:1002
 msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <スタイル>\t表のスタイル (整数) "
+msgstr "\t--table-style, -t <styl>\tStyle tabeli (integer)."
 
 #: ../tools/snapper.cc:223
 msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr "\t--template, -t <名前>\t\t使用する設定雛型の指定"
+msgstr "\t--template, -t <name>\t\tNazwa konfiguracji szablonu do użycia."
 
 #: ../tools/snapper.cc:429
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <種類>\t\tスナップショットの種類"
+msgstr "\t--type, -t <typ>\t\tTyp zrzutu."
 
 #: ../tools/snapper.cc:287
 msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <種類>\t\t一覧表示するスナップショットの種類"
+msgstr "\t--type, -t <typ>\t\tLista typów zrzutu."
 
 #: ../tools/snapper.cc:434 ../tools/snapper.cc:550
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--userdata, -u <データ>\tスナップショットに対するユーザデータの指定"
+msgstr "\t--userdata, -u <userdata>\tZrzut userdata."
 
 #: ../tools/snapper.cc:1001
 msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tより詳しい出力を行なう"
+msgstr "\t--verbose, -v\t\t\tZwiększenie gadatliwości."
 
 #: ../tools/snapper.cc:1005
 msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tバージョンを表示して終了する"
+msgstr "\t--version\t\t\tDrukuje wersję programu i kończy pracę"
 
 #: ../tools/snapper.cc:945
 msgid "\tsnapper cleanup <cleanup-algorithm>"
-msgstr "\tsnapper cleanup <クリーンアップアルゴリズム>"
+msgstr "\tsnapper cleanup <algorytm czyszczenia>"
 
 #: ../tools/snapper.cc:426
 msgid "\tsnapper create"
@@ -97,15 +97,15 @@ msgstr "\tsnapper create"
 
 #: ../tools/snapper.cc:219
 msgid "\tsnapper create-config <subvolume>"
-msgstr "\tsnapper create-config <サブボリューム>"
+msgstr "\tsnapper create-config <subvolume>"
 
 #: ../tools/snapper.cc:610
 msgid "\tsnapper delete <number>"
-msgstr "\tsnapper delete <番号>"
+msgstr "\tsnapper delete <number>"
 
 #: ../tools/snapper.cc:774
 msgid "\tsnapper diff <number1>..<number2> [files]"
-msgstr "\tsnapper diff <番号 1>..<番号 2> [ファイル]"
+msgstr "\tsnapper diff <numer1>..<numer2> [plik]"
 
 #: ../tools/snapper.cc:284
 msgid "\tsnapper list"
@@ -117,95 +117,95 @@ msgstr "\tsnapper list-configs"
 
 #: ../tools/snapper.cc:545
 msgid "\tsnapper modify <number>"
-msgstr "\tsnapper modify <番号>"
+msgstr "\tsnapper modify <numer>"
 
 #: ../tools/snapper.cc:646
 msgid "\tsnapper mount <number>"
-msgstr "\tsnapper mount <番号>"
+msgstr "\tsnapper mount <numer>"
 
 #: ../tools/snapper.cc:718
 msgid "\tsnapper status <number1>..<number2>"
-msgstr "\tsnapper status <番号 1>..<番号 2>"
+msgstr "\tsnapper status <numer1>..<numer2>"
 
 #: ../tools/snapper.cc:682
 msgid "\tsnapper umount <number>"
-msgstr "\tsnapper umount <番号>"
+msgstr "\tsnapper umount <numer>"
 
 #: ../tools/snapper.cc:823
 msgid "\tsnapper undochange <number1>..<number2> [files]"
-msgstr "\tsnapper undochange <番号 1>..<番号 2> [ファイル]"
+msgstr "\tsnapper undochange <numer1>..<numer2> [plik]"
 
 #: ../tools/snapper.cc:999
 msgid "    Global options:"
-msgstr "    グローバルオプション:"
+msgstr "    Globalne opcje:"
 
 #: ../tools/snapper.cc:428
 msgid "    Options for 'create' command:"
-msgstr "    'create' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'create':"
 
 #: ../tools/snapper.cc:221
 msgid "    Options for 'create-config' command:"
-msgstr "    'create-config' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'create-config':"
 
 #: ../tools/snapper.cc:286
 msgid "    Options for 'list' command:"
-msgstr "    'list' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'list':"
 
 #: ../tools/snapper.cc:547
 msgid "    Options for 'modify' command:"
-msgstr "    'modify' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'modify':"
 
 #: ../tools/snapper.cc:720
 msgid "    Options for 'status' command:"
-msgstr "    'status' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'status':"
 
 #: ../tools/snapper.cc:825
 msgid "    Options for 'undochange' command:"
-msgstr "    'undochange' コマンドに対するオプション:"
+msgstr "    Opcje dla polecenia 'undochange':"
 
 #: ../tools/snapper.cc:944
 msgid "  Cleanup snapshots:"
-msgstr "  スナップショットのクリーンアップ:"
+msgstr "  Czyszczenie zrzutów:"
 
 #: ../tools/snapper.cc:717 ../tools/snapper.cc:773
 msgid "  Comparing snapshots:"
-msgstr "  スナップショットの比較:"
+msgstr "  Porównanie zrzutów:"
 
 #: ../tools/snapper.cc:218
 msgid "  Create config:"
-msgstr "  設定の作成:"
+msgstr "  Tworzenie config:"
 
 #: ../tools/snapper.cc:425
 msgid "  Create snapshot:"
-msgstr "  スナップショットの作成:"
+msgstr "  Utworzono zrzut:"
 
 #: ../tools/snapper.cc:609
 msgid "  Delete snapshot:"
-msgstr "  スナップショットの削除:"
+msgstr "  Usunięcie zrzutu:"
 
 #: ../tools/snapper.cc:171
 msgid "  List configs:"
-msgstr "  設定の一覧表示:"
+msgstr "  Lista konfiguracji:"
 
 #: ../tools/snapper.cc:283
 msgid "  List snapshots:"
-msgstr "  スナップショットの一覧表示:"
+msgstr "  Lista zrzutów:"
 
 #: ../tools/snapper.cc:544
 msgid "  Modify snapshot:"
-msgstr "  スナップショットの変更:"
+msgstr "  Modyfikacja zrzutu:"
 
 #: ../tools/snapper.cc:645
 msgid "  Mount snapshot:"
-msgstr "  スナップショットのマウント:"
+msgstr "  Montuj zrzut:"
 
 #: ../tools/snapper.cc:681
 msgid "  Umount snapshot:"
-msgstr "  スナップショットのマウント解除:"
+msgstr "  Odmontuj zrzut::"
 
 #: ../tools/snapper.cc:822
 msgid "  Undo changes:"
-msgstr "  変更の取り消し:"
+msgstr "  Cofanie zmian:"
 
 #: ../tools/snapper.cc:335 ../tools/snapper.cc:362
 msgid "#"
@@ -213,270 +213,310 @@ msgstr "#"
 
 #: ../tools/snapper.cc:338
 msgid "Cleanup"
-msgstr "クリーンアップ"
+msgstr "Wyczyszczono"
 
 #: ../tools/snapper.cc:960
 msgid "Command 'cleanup' needs one arguments."
-msgstr "'cleanup' コマンドには 1 つのパラメータが必要です。"
+msgstr "Polecenie  'cleanup' wymaga jednego argumentu."
 
 #: ../tools/snapper.cc:455
 msgid "Command 'create' does not take arguments."
-msgstr "'create' コマンドにはパラメータはありません。"
+msgstr "Polecenie 'create' nie przyjmuje argumentów."
 
 #: ../tools/snapper.cc:240
 msgid "Command 'create-config' needs one argument."
-msgstr "'create-config' コマンドには 1 つのパラメータが必要です。"
+msgstr "Polecenie 'create-config' potrzebuje jednego argumentu."
 
 #: ../tools/snapper.cc:621
 msgid "Command 'delete' needs at least one argument."
-msgstr "'delete' コマンドには少なくとも 1 つのパラメータが必要です。"
+msgstr "Polecenie 'delete' potrzebuje co najmniej jednego argumentu."
 
 #: ../tools/snapper.cc:992
 msgid "Command 'help' does not take arguments."
-msgstr "'help' コマンドにはパラメータはありません。"
+msgstr "Polecenie 'help' nie przyjmuje argumentów."
 
 #: ../tools/snapper.cc:303
 msgid "Command 'list' does not take arguments."
-msgstr "'list' コマンドにはパラメータはありません。"
+msgstr "Polecenie 'list' nie przyjmuje argumentów."
 
 #: ../tools/snapper.cc:183
 msgid "Command 'list-configs' does not take arguments."
-msgstr "'list-configs' コマンドにはパラメータはありません。"
+msgstr "Polecenie 'list-configs' nie przyjmuje argumentów."
 
 #: ../tools/snapper.cc:569
 msgid "Command 'modify' needs at least one argument."
-msgstr "'modify' コマンドには少なくとも 1 つのパラメータが必要です。"
+msgstr "Polecenie 'modify' wymaga co najmniej jednego argumentu."
 
 #: ../tools/snapper.cc:657 ../tools/snapper.cc:693
 msgid "Command 'mount' needs at least one argument."
-msgstr "'mount' コマンドには少なくとも 1 つのパラメータが必要です。"
+msgstr "Polecenie 'mount' wymaga co najmniej jednego argumentu."
 
 #: ../tools/snapper.cc:737
 msgid "Command 'status' needs one argument."
-msgstr "'status' コマンドには 1 つのパラメータが必要です。"
+msgstr "Polecenie 'status' wymaga jednego argumentu."
 
 #: ../tools/snapper.cc:842
 msgid "Command 'undochange' needs at least one argument."
-msgstr "'undochange' コマンドには少なくとも 1 つのパラメータが必要です。"
+msgstr "Polecenie 'undochange' wymaga co najmniej jednego argumentu."
 
 #: ../tools/snapper.cc:1182
 #, fuzzy, c-format
 msgid "Command failed (%s). See log for more information."
-msgstr "詳しくは 'snapper help' コマンドをご利用ください。"
+msgstr "Spróbuj 'snapper help'  aby uzyskać więcej informacji."
 
 #: ../tools/snapper.cc:190
 msgid "Config"
-msgstr "設定"
+msgstr "Konfiguracja"
 
 #: ../tools/snapper.cc:1165
 #, c-format
 msgid "Config '%s' is invalid."
-msgstr "設定 '%s' は正しくありません。"
+msgstr "Repozytorium \"%s\" jest niepoprawne."
 
 #: ../tools/snapper.cc:1160
 #, c-format
 msgid "Config '%s' not found."
-msgstr "設定 '%s' が見つかりません。"
+msgstr "Nie znaleziono konfiguracji '%s'."
 
 #: ../tools/snapper.cc:274
 #, c-format
 msgid "Creating config failed (%s)."
-msgstr "設定の作成に失敗しました (%s)。"
+msgstr "Tworzenie konfiguracji nie powiodło się (%s)."
 
 #: ../tools/snapper.cc:337 ../tools/snapper.cc:363
 msgid "Date"
-msgstr "日付"
+msgstr "Data"
 
 #: ../tools/snapper.cc:339 ../tools/snapper.cc:364 ../tools/snapper.cc:391
 msgid "Description"
-msgstr "説明"
+msgstr "Opis"
 
 #: ../tools/snapper.cc:264
 msgid "Detecting filesystem type failed."
-msgstr "ファイルシステムの種類の検出に失敗しました。"
+msgstr "Wykrywanie systemu plików nie powiodło się."
 
 #: ../tools/snapper.cc:897
 #, c-format
 msgid "File '%s' not found."
-msgstr "'%s' というファイルが見つかりません。"
+msgstr "Nie znaleziono pliku '%s'."
 
 #: ../tools/snapper.cc:103
 msgid "Identical snapshots."
-msgstr "同一のスナップショットです。"
+msgstr "Identyczne zrzuty."
 
 #: ../tools/snapper.cc:73
 #, c-format
 msgid "Invalid snapshot '%s'."
-msgstr "スナップショットが正しくありません ('%s') 。"
+msgstr "Nieprawidłowy zrzut '%s'."
 
 #: ../tools/snapper.cc:595 ../tools/snapper.cc:636 ../tools/snapper.cc:672
 #: ../tools/snapper.cc:708
 msgid "Invalid snapshot."
-msgstr "スナップショットが正しくありません。"
+msgstr "Nieprawidłowy zrzut."
 
 #: ../tools/snapper.cc:94 ../tools/snapper.cc:864
 msgid "Invalid snapshots."
-msgstr "スナップショットが正しくありません。"
+msgstr "Nieprawidłowe zrzuty."
 
 #: ../tools/snapper.cc:247
 msgid "Invalid subvolume."
-msgstr "サブボリュームが正しくありません。"
+msgstr "Nieprawidłowy subvolume."
 
 #: ../tools/snapper.cc:1107
 #, c-format
 msgid "Invalid table style %d."
-msgstr "表のスタイルが正しくありません (%d) 。"
+msgstr "Nieprawidłowy styl tabeli %d."
 
 #: ../tools/snapper.cc:120 ../tools/snapper.cc:129 ../tools/snapper.cc:138
 #: ../tools/snapper.cc:535 ../tools/snapper.cc:600
 msgid "Invalid userdata."
-msgstr "ユーザデータが正しくありません。"
+msgstr "Nieprawidłowy userdata."
 
 #: ../tools/snapper.cc:207
 #, c-format
 msgid "Listing configs failed (%s)."
-msgstr "設定の一覧表示に失敗しました (%s)。"
+msgstr "Pliki konfiguracyjne listy nie powiodły się (%s)."
 
 #: ../tools/utils/GetOpts.cc:70
 #, c-format
 msgid "Missing argument for command option '%s'."
-msgstr "'%s' コマンドオプションに対するパラメータがありません。"
+msgstr "Brakujący argument dla opcji polecenia '%s'."
 
 #: ../tools/utils/GetOpts.cc:68
 #, c-format
 msgid "Missing argument for global option '%s'."
-msgstr "'%s' グローバルオプションに対するパラメータがありません。"
+msgstr "Brakujący argument dla globalnej opcji '%s'."
 
 #: ../tools/snapper.cc:496
 msgid "Missing or invalid pre-number."
-msgstr "前番号が設定されていないが、正しくありません。"
+msgstr "Brakujące lub nieprawidłowe wcześniejsze numery."
 
 #: ../tools/snapper.cc:1134
 msgid "No command provided."
-msgstr "コマンドが指定されていません。"
+msgstr "Nie podano polecenia, pod warunkiem."
 
 #: ../tools/snapper.cc:756 ../tools/snapper.cc:857
 #, c-format
 msgid "Opening file '%s' failed."
-msgstr "ファイル '%s' を開けませんでした。"
+msgstr "Otwieranie pliku '%s' nie powiodło się."
 
 #: ../tools/snapper.cc:388
 msgid "Post #"
-msgstr "後 #"
+msgstr "Post #"
 
 #: ../tools/snapper.cc:390
 msgid "Post Date"
-msgstr "後日付"
+msgstr "Po dacie"
 
 #: ../tools/snapper.cc:336 ../tools/snapper.cc:387
 msgid "Pre #"
-msgstr "前 #"
+msgstr "Pre #"
 
 #: ../tools/snapper.cc:389
 msgid "Pre Date"
-msgstr "前日付"
+msgstr "Przed datą"
 
 #: ../tools/snapper.cc:80
 #, c-format
 msgid "Snapshot '%u' not found."
-msgstr "スナップショット '%u' が見つかりません。"
+msgstr "Zrzutu '%u' nie znaleziono."
 
 #: ../tools/snapper.cc:191
 msgid "Subvolume"
-msgstr "サブボリューム"
+msgstr "Subvolume"
 
 #: ../tools/snapper.cc:1135 ../tools/snapper.cc:1144
 #: ../tools/utils/GetOpts.cc:63 ../tools/utils/GetOpts.cc:71
 msgid "Try 'snapper help' for more information."
-msgstr "詳しくは 'snapper help' コマンドをご利用ください。"
+msgstr "Spróbuj 'snapper help'  aby uzyskać więcej informacji."
 
 #: ../tools/snapper.cc:334
 msgid "Type"
-msgstr "種類"
+msgstr "Typ"
 
 #: ../tools/snapper.cc:980
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
-msgstr "不明なクリーンアップアルゴリズム '%s' です。"
+msgstr "Nieznany algorytm czyszczenia '%s'."
 
 #: ../tools/snapper.cc:1143
 #, c-format
 msgid "Unknown command '%s'."
-msgstr "不明なコマンド '%s' です。"
+msgstr "Nieznane polecenie \"%s\""
 
 #: ../tools/utils/GetOpts.cc:60
 #, c-format
 msgid "Unknown global option '%s'."
-msgstr "不明なグローバルオプション '%s' です。"
+msgstr "Nieznana opcja globalna '%s'."
 
 #: ../tools/utils/GetOpts.cc:62
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
-msgstr "不明なオプション '%s' です (コマンド '%s') 。"
+msgstr "Nieznana opcja '%s' dla polecenia  '%s'."
 
 #: ../tools/snapper.cc:474
 msgid "Unknown type of snapshot."
-msgstr "不明なスナップショットの種類です。"
+msgstr "Nieznany typ zrzutu."
 
 #: ../tools/snapper.cc:322
 msgid "Unknown type of snapshots."
-msgstr "不明なスナップショットの種類です。"
+msgstr "Nieznany typ zrzutu."
 
 #: ../tools/snapper.cc:1108
 #, c-format
 msgid "Use an integer number from %d to %d"
-msgstr "%d から %d までの整数を指定してください"
+msgstr "Proszę użyć liczby całkowitej od %d do %d"
 
 #: ../tools/snapper.cc:340 ../tools/snapper.cc:365 ../tools/snapper.cc:392
 msgid "Userdata"
-msgstr "ユーザデータ"
+msgstr "Userdata"
 
 #: ../tools/snapper.cc:1025
 msgid "comparing snapshots..."
-msgstr "スナップショットを比較しています..."
+msgstr "porównanie zrzutów..."
 
 #: ../tools/snapper.cc:1038
 #, c-format
 msgid "creating %s"
-msgstr "%s を作成しています"
+msgstr "Tworzenie %s"
 
 #: ../tools/snapper.cc:1042
 #, c-format
 msgid "deleting %s"
-msgstr "%s を削除しています"
+msgstr "kasowanie %s"
 
 #: ../tools/snapper.cc:1026
 msgid "done"
-msgstr "完了"
+msgstr "zrobione"
 
 #: ../tools/snapper.cc:1045
 #, c-format
 msgid "failed to create %s"
-msgstr "%s の作成に失敗しました"
+msgstr "Nie udało się utworzyć %s"
 
 #: ../tools/snapper.cc:1049
 #, c-format
 msgid "failed to delete %s"
-msgstr "%s の削除に失敗しました"
+msgstr "Nie udało się usunąć %s"
 
 #: ../tools/snapper.cc:1047
 #, c-format
 msgid "failed to modify %s"
-msgstr "%s の修正に失敗しました"
+msgstr "Nie udało się zmodufikować %s"
 
 #: ../tools/snapper.cc:1040
 #, c-format
 msgid "modifying %s"
-msgstr "%s を修正しています"
+msgstr "modyfikowanie %s"
 
 #: ../tools/snapper.cc:1035
 msgid "undoing change done"
-msgstr "変更の取り消しが完了しました"
+msgstr "zmiany cofania zrobione "
 
 #: ../tools/snapper.cc:1034
 msgid "undoing change..."
-msgstr "変更を取り消しています..."
+msgstr "zmiany cofania..."
 
 #: ../tools/snapper.cc:996
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr "usage: snapper [グローバルオプション] <コマンド> [コマンドオプション] [コマンドパラメータ]"
+msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [polecenie-argumenty]"
+
+#, fuzzy
+#~| msgid "add needs one argument"
+#~ msgid "Command 'modify' needs one argument."
+#~ msgstr "add wymaga jednego parametru"
+
+#, fuzzy
+#~| msgid "add needs one argument"
+#~ msgid "Command 'diff' needs one argument."
+#~ msgstr "add wymaga jednego parametru"
+
+#, fuzzy
+#~| msgid "File '%s' not found on medium '%s'"
+#~ msgid "File '%s' not found in diff."
+#~ msgstr "Nie znaleziono liku '%s' na nośniku '%s'"
+
+#, fuzzy
+#~| msgid "Rollback Support: "
+#~ msgid "  Rollback snapshots:"
+#~ msgstr "Obłsuga przywracania:"
+
+#, fuzzy
+#~| msgid "diff needs two arguments"
+#~ msgid "Command 'diff' needs two arguments."
+#~ msgstr "diff wymaga dwóch parametrów"
+
+#, fuzzy
+#~| msgid "rename needs two arguments"
+#~ msgid "Command 'rollback' needs two arguments."
+#~ msgstr "rename wymaga dwóch parametrów"
+
+#, fuzzy
+#~| msgid "File '%s' not found on medium '%s'"
+#~ msgid "File '%s' not included in diff."
+#~ msgstr "Nie znaleziono liku '%s' na nośniku '%s'"
+
+#, fuzzy
+#~| msgid "Rollback"
+#~ msgid "rollback done"
+#~ msgstr "Wycofaj"
